--- a/amazon.html
+++ b/amazon.html
@@ -45,7 +45,7 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity">3</div>
+          <div class="cart-quantity js-cart-quantity">3</div>
           <div class="cart-text">Cart</div>
         </a>
       </div>
@@ -195,14 +195,15 @@
             Added
           </div>
 
-          <button class="add-to-cart-button button-primary">
+          <button class="button-primary">
             Add to Cart
           </button>
         </div> -->
       </div>
     </div>
 
-
+    <script src="data/products.js"></script>
+    <script src="data/cart.js"></script>
     <script src="scripts/amazon.js"></script>
   </body>
 </html>
